display some measurements.

--- a/style/style.less
+++ b/style/style.less
@@ -25,3 +25,12 @@ snp-stream.fullscreen {
   height:100% !important;
   z-index:1000 !important;
 }
+
+.stats {
+  position:absolute;
+  right:0;
+  top:0;
+  width:200px;
+  background-color:black;
+  color:white;
+}
